--- a/chess.html
+++ b/chess.html
@@ -97,9 +97,11 @@
 		.selected.w.nobg {
 			background: lightgray;
 		}
+
 		.selected.b.nobg {
 			background: darkgray;
 		}
+
 		label {
 			font-size: 0.5em;
 		}
@@ -123,6 +125,7 @@
 			char = "P"
 			value = 0
 			dirs = []
+			moved = false
 			constructor(x, y, color) {
 				this.x = x
 				this.y = y
@@ -152,10 +155,11 @@
 				return moves
 			}
 
-			move(fr) {
+			move(fr, no_log) {
 				console.log(this.name, "to", fr)
+				this.moved = true
 				let xy = fr2xy(fr)
-				log.push(this.char + xy2fr(this.x, this.y) + (fr2p(fr) === ' ' ? '' : 'x') + fr)
+				if (!no_log) log.push(this.char + xy2fr(this.x, this.y) + (fr2p(fr) === ' ' ? '' : 'x') + fr)
 				grid[this.y][this.x] = ' '
 				this.x = xy[0]
 				this.y = xy[1]
@@ -171,12 +175,6 @@
 			constructor(x, y, color) {
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♜</span>' : '<span class="piece wf">♜</span><span class="piece bf over">♖</span>'
-			}
-
-			get_moves(grid) {
-				let moves = super.get_moves(grid)
-				// TODO: Castling.
-				return moves
 			}
 		}
 
@@ -251,7 +249,46 @@
 				The king will not move through a check during castling
 				All squares between the rook and king are empty
 				*/
+				let rank = this.color ? 8 : 1
+				if (!this.moved) {
+					if (!fr2p('a'+rank).moved) {
+						// Queenside: 0-0-0
+						let clear = true
+						for (let i = 1; i < this.x; ++i) {
+							console.log('check', 8 - rank, i, grid[8 - rank][i])
+							if (grid[8 - rank][i] !== ' ') clear = false
+						}
+						if (clear) moves.push([2, 8 - rank])
+					}
+					if (!fr2p('h'+rank).moved) {
+						// Kingside: 0-0
+						let clear = true
+						for (let i = 6; i > this.x; --i) {
+							console.log('check', 8 - rank, i, grid[8 - rank][i])
+							if (grid[8 - rank][i] !== ' ') clear = false
+						}
+						if (clear) moves.push([6, 8 - rank])
+					}
+				}
 				return moves
+			}
+
+			move(fr) {
+				super.move(fr)
+				let move = log[log.length - 1]
+				let y = this.y
+				let rank = 8 - y
+				console.log(y, `Ke${rank}g${rank}`)
+				if (move === `Ke${rank}g${rank}`) { // TODO? Only 5171 according to https://en.wikipedia.org/wiki/ICCF_numeric_notation
+					move = '0-0'
+					console.log(move)
+					grid[y][7].move('f' + rank, true)
+				}
+				if (move === `Ke${rank}c${rank}`) {
+					move = '0-0-0'
+					grid[y][0].move('d' + rank, true)
+				}
+				log[log.length - 1] = move
 			}
 		}
 
@@ -426,7 +463,7 @@
 					for (let move of moves) {
 						let square = document.getElementById(xy2fr(...move))
 						square.classList.add('selected')
-						if(!guides.checked) square.classList.add('nobg')
+						if (!guides.checked) square.classList.add('nobg')
 					}
 				}
 			})
