--- a/chess.html
+++ b/chess.html
@@ -131,6 +131,10 @@
 				this.html = this.color ? '<span class="piece bf">?</span>' : '<span class="piece bf over">?</span>'
 			}
 
+			copy() {
+				return new Piece(this.x, this.y, this.color)
+			}
+
 			get_moves(board, depth) {
 				let grid = board.grid
 				let moves = []
@@ -160,7 +164,7 @@
 				for (let row in grid) {
 					for (let col in grid) {
 						let piece = grid[row][col]
-						if (piece === ' ' || piece.color === this.color) continue
+						if (piece == ' ' || piece.color === this.color) continue
 						if (piece.get_moves(board, depth + 1).find(xy => xy[0] === this.x && xy[1] === this.y)) threats.push(piece)
 					}
 				}
@@ -187,6 +191,10 @@
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♜</span>' : '<span class="piece wf">♜</span><span class="piece bf over">♖</span>'
 			}
+
+			copy() {
+				return new Rook(this.x, this.y, this.color)
+			}
 		}
 
 		class Knight extends Piece {
@@ -196,6 +204,10 @@
 			constructor(x, y, color) {
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♞</span>' : '<span class="piece wf">♞</span><span class="piece bf over">♘</span>'
+			}
+
+			copy() {
+				return new Knight(this.x, this.y, this.color)
 			}
 
 			get_moves(board, depth) {
@@ -221,6 +233,10 @@
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♝</span>' : '<span class="piece wf">♝</span><span class="piece bf over">♗</span>'
 			}
+
+			copy() {
+				return new Bishop(this.x, this.y, this.color)
+			}
 		}
 
 		class Queen extends Piece {
@@ -232,6 +248,10 @@
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♛</span>' : '<span class="piece wf">♛</span><span class="piece bf over">♕</span>'
 			}
+
+			copy() {
+				return new Queen(this.x, this.y, this.color)
+			}
 		}
 
 		class King extends Piece {
@@ -241,6 +261,10 @@
 			constructor(x, y, color) {
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♚</span>' : '<span class="piece wf">♚</span><span class="piece bf over">♔</span>'
+			}
+
+			copy() {
+				return new King(this.x, this.y, this.color)
 			}
 
 			get_moves(board, depth) {
@@ -259,48 +283,47 @@
 				// Castling.
 				/* https://chessily.com/learn-chess/king/
 				The king and rook have not yet been moved in the game.
-				TODO: The king is not in check before and immediately after castling
-				TODO: The king will not move through a check during castling
+				The king is not in check before and immediately after castling.
+				TODO: The king will not move through a check during castling.
 				All squares between the rook and king are empty.
 				*/
-				let rank = this.color ? 8 : 1
-				if (!this.moved) {
-					if (!board.fr2p('a' + rank).moved) {
-						// Queenside: 0-0-0
-						let clear = true
-						for (let i = 1; i < this.x; ++i) {
-							if (grid[8 - rank][i] !== ' ') clear = false
+				if (this.get_threats(board, depth).length === 0) {
+					let rank = this.color ? 8 : 1
+					if (!this.moved) {
+						if (!board.fr2p('a' + rank).moved) {
+							// Queenside: 0-0-0
+							let clear = true
+							for (let i = 1; i < this.x; ++i) {
+								if (grid[8 - rank][i] !== ' ') clear = false
+							}
+							if (clear) moves.push([2, 8 - rank])
 						}
-						if (clear) moves.push([2, 8 - rank])
-					}
-					if (!board.fr2p('h' + rank).moved) {
-						// Kingside: 0-0
-						let clear = true
-						for (let i = 6; i > this.x; --i) {
-							if (grid[8 - rank][i] !== ' ') clear = false
+						if (!board.fr2p('h' + rank).moved) {
+							// Kingside: 0-0
+							let clear = true
+							for (let i = 6; i > this.x; --i) {
+								if (grid[8 - rank][i] !== ' ') clear = false
+							}
+							if (clear) moves.push([6, 8 - rank])
 						}
-						if (clear) moves.push([6, 8 - rank])
 					}
 				}
-
 				// Remove unsafe moves.
 				let safe_moves = []
 				for (let move of moves) {
-					let new_board = structuredClone(board)  // Doesn't clone methods!
-					for (let row in grid) {
-						for (let col in grid) {
-							let piece = grid[row][col]
-							new_board.grid[row][col] = copyInstance(piece)
-						}
-					}
+					let new_board = board.copy()
+					console.log("New board:")
+					//render(new_board)
 					let new_piece = new_board.grid[this.y][this.x]
+					console.log(depth, "Getting cloned piece at", this.x, this.y, ":", new_piece)
 					let fr = xy2fr(...move)
 					new_piece.move(new_board, fr)
-					//debugger
-					let threats = new_piece.get_threats(board, depth)
+					let threats = new_piece.get_threats(new_board, depth)
 					console.log('K', fr, '=>', threats)
 					if (threats.length === 0) safe_moves.push(move)
 				}
+				let frs = safe_moves.map(e => xy2fr(e))
+				console.log("Safe moves", frs)
 				return safe_moves
 			}
 
@@ -321,17 +344,6 @@
 			}
 		}
 
-		// https://www.nickang.com/2018-01-17-how-to-clone-class-instance-javascript/
-		function copyInstance(original) {
-			var copied = Object.assign(
-				Object.create(
-					Object.getPrototypeOf(original)
-				),
-				original
-			)
-			return copied
-		}
-
 		class Pawn extends Piece {
 			name = "Pawn"
 			char = ""
@@ -339,6 +351,10 @@
 			constructor(x, y, color) {
 				super(x, y, color)
 				this.html = this.color ? '<span class="piece bf">♟︎</span>' : '<span class="piece wf">♟︎</span><span class="piece bf over">♙</span>'
+			}
+
+			copy() {
+				return new Pawn(this.x, this.y, this.color)
 			}
 
 			get_moves(board, depth) {
@@ -490,16 +506,33 @@
 
 		class Board {
 			log = []
-			grid = [
-				[new Rook(0, 0, BLACK), new Knight(1, 0, BLACK), new Bishop(2, 0, BLACK), new Queen(3, 0, BLACK), new King(4, 0, BLACK), new Bishop(5, 0, BLACK), new Knight(6, 0, BLACK), new Rook(7, 0, BLACK)],
-				[new Pawn(0, 1, BLACK), new Pawn(1, 1, BLACK), new Pawn(2, 1, BLACK), new Pawn(3, 1, BLACK), new Pawn(4, 1, BLACK), new Pawn(5, 1, BLACK), new Pawn(6, 1, BLACK), new Pawn(7, 1, BLACK)],
-				[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
-				[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
-				[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
-				[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
-				[new Pawn(0, 6), new Pawn(1, 6), new Pawn(2, 6), new Pawn(3, 6), new Pawn(4, 6), new Pawn(5, 6), new Pawn(6, 6), new Pawn(7, 6)],
-				[new Rook(0, 7), new Knight(1, 7), new Bishop(2, 7), new Queen(3, 7), new King(4, 7), new Bishop(5, 7), new Knight(6, 7), new Rook(7, 7)],
-			]
+			grid = [[],[],[],[],[],[],[],[]]
+
+			reset() {
+				this.log = []
+				this.grid = [
+					[new Rook(0, 0, BLACK), new Knight(1, 0, BLACK), new Bishop(2, 0, BLACK), new Queen(3, 0, BLACK), new King(4, 0, BLACK), new Bishop(5, 0, BLACK), new Knight(6, 0, BLACK), new Rook(7, 0, BLACK)],
+					[new Pawn(0, 1, BLACK), new Pawn(1, 1, BLACK), new Pawn(2, 1, BLACK), new Pawn(3, 1, BLACK), new Pawn(4, 1, BLACK), new Pawn(5, 1, BLACK), new Pawn(6, 1, BLACK), new Pawn(7, 1, BLACK)],
+					[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
+					[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
+					[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
+					[' ', ' ', ' ', ' ', ' ', ' ', ' ', ' '],
+					[new Pawn(0, 6), new Pawn(1, 6), new Pawn(2, 6), new Pawn(3, 6), new Pawn(4, 6), new Pawn(5, 6), new Pawn(6, 6), new Pawn(7, 6)],
+					[new Rook(0, 7), new Knight(1, 7), new Bishop(2, 7), new Queen(3, 7), new King(4, 7), new Bishop(5, 7), new Knight(6, 7), new Rook(7, 7)],
+				]
+			}
+
+			copy() {
+				let new_board = new Board()
+				new_board.log = [...this.log]
+				for (let row in this.grid) {
+					for (let col in this.grid) {
+						let piece = this.grid[row][col]
+						new_board.grid[row][col] = (piece === ' ') ? ' ' : piece.copy()
+					}
+				}
+				return new_board
+			}
 
 			xy2p(xy) {
 				if (xy[1] < 0 || xy[1] > 7 || xy[0] < 0 || xy[0] > 7) return ''
@@ -532,6 +565,7 @@
 		}
 
 		let board = new Board()
+		board.reset()
 		render(board)
 	</script>
 </body>
