--- a/chess.html
+++ b/chess.html
@@ -338,7 +338,7 @@
 					move = '0-0-0'
 					board.grid[y][0].move(board, 'd' + rank)
 				}
-				board.log[board.log.length - 1] = move
+				board.log_check(move, 1 - this.color)
 			}
 		}
 
